--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -614,8 +614,10 @@ th {
     /* margin-left: 1rem; */
 }
 .MuiListItemText-root span:active,
-.MuiListItemText-root span:hover {
+.MuiListItemText-root span:hover ,.react-calendar__tile--active {
     color: var(--primary-color);
+    background-color:none !important;
+    background: none !important;
 }
 .react-calendar__navigation button {
     font-size: 2.3rem !important;
@@ -631,6 +633,7 @@ th {
 .react-calendar__month-view__weekdays__weekday {
     color: var(--primary-color);
 }
+
 .react-calendar__month-view__days {
     font-weight: 700;
 }
@@ -670,7 +673,8 @@ th {
 }
 .react-calendar__tile:enabled:hover,
 .react-calendar__tile:enabled:focus {
-    background-color: transparent !important;
+    background-color: none !important;
+    background: none !important;
 }
 
 .MuiButtonBase-root.MuiButton-root {
