--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -586,10 +586,8 @@ th {
     font-size: 2.3rem !important;
     text-decoration: none !important;
     padding: 2.5rem;
-    cursor:unset !important;;
-  
+    cursor:default !important;;
 }
-.react-calendar__viewContainer ,.MuiList-padding{  pointer-events: none !important;}
 
 .react-calendar__tile {
     max-width: 100%;
@@ -601,9 +599,12 @@ th {
     color: #ff0000; /* Optional: to visually distinguish weekends */
 }
 
-
 .gazetted-holiday,
-.react-calendar__tile.saturday ,.restricted-holiday,
+.react-calendar__tile.saturday {
+    color: #ffa500; /* Add your desired styles */
+}
+
+.restricted-holiday,
 .react-calendar__tile.sunday {
     color: #ff0000; /* Add your desired styles */
 }
@@ -655,24 +656,21 @@ th {
     color: #2e7d32;
     border-radius: 15px;
 }
-.react-calendar__tile--active {
-    color: inherit !important;
-    font-size: large !important;
-    
-}
-.react-calendar button:enabled:hover {cursor:default !important;
-}
+/* .react-calendar__tile--active {
+    color: #2e7d32 !important;
+} */
 
-.react-calendar__tile.restricted-holiday,.rh-class {
+.react-calendar__tile.restricted-holiday {
     color: #ffa500;
-    font-weight: 700 !important;
+    font-weight: 700;
 
-   
+    /* border: 2px solid #FFA500 !important; */
 }
 
-.react-calendar__tile.gazetted-holiday ,.gh-class{
+.react-calendar__tile.gazetted-holiday {
     color: #ff0000;
-      font-weight: 700 !important;
+    /* border: 2px solid #FF0000; */
+    font-weight: 700;
 }
 .react-calendar__tile:enabled:hover,
 .react-calendar__tile:enabled:focus {
