Holiday List Updated

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -589,7 +589,7 @@ th {
     cursor:unset !important;;
   
 }
-.react-calendar__viewContainer ,.MuiList-padding{  pointer-events: none !important;}
+.react-calendar__viewContainer ,.holiday-list .MuiList-padding{  pointer-events: none !important;}
 
 .react-calendar__tile {
     max-width: 100%;
