Update the spacing issue and mail and phone Click handle also created

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -66,6 +66,8 @@ p {
     margin-bottom: 1rem;
     margin-top: 1rem;
 }
+.contact-page p{margin-block: 0 !important;}
+.MuiIconButton-root:hover{border-radius: 0 !important;}
 .Topbar-section {
     min-height: 55px !important;
 }
